--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h1><a href=""></a></h1>
     <main>
         <section id="telefone">
+            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
 
         </section>
 
