--- a/youtube.html
+++ b/youtube.html
@@ -9,7 +9,7 @@
     
 </head>
 <body>
-    <img src="" alt="YouTube">
+    <img src="imagens/tela-youtube.jpg" alt="YouTube">
     <a href="https://www.youtube.com/channel/UC3lFjAfqA_g7kdEOq6ihX5A" target="_blank">ACESSE</a>
 </body>
 </html>
