--- a/github.html
+++ b/github.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="" alt="GitHub">
+    <img src="imagens/tela-github.jpg" alt="GitHub">
     <a href="https://github.com/eloosouz" target="_blank">ACESSE</a>
     
 </body>
