--- a/twitter.html
+++ b/twitter.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="" alt="twitter">
+    <img src="imagens/tela-twitter.jpg" alt="twitter">
     <a href="https://twitter.com/hin4ta24" target="_blank">ACESSE</a>
     
 </body>
